hphp/hack/test/typecheck/xhp/xhp_attr_duplicated.php.like_types.exp
File "xhp_attr_duplicated.php", line 4, characters 3-41:
Cannot redeclare `:c::width` (Parsing[1002])
