hphp/hack/test/typecheck/xhp/xhp_attr_duplicated.php
<?hh

final class :c {
  attribute
    num width,
    num width;
}
